# simple_tg_bot

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
src/: handlers_misc.py  handlers_todo.py  logging_setup.py  services.py  stats.py  todo_service.py
